--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "Cryptographically signed AI tool responses for preventing hallucinations"
 readme = "README.md"
 authors = [
-    {name = "TrustChain Contributors", email = "info@trustchain.dev"}
+    {name = "Ed Cherednik", email = "edcherednik@gmail.com"}
 ]
 license = {text = "MIT"}
 requires-python = ">=3.8"
@@ -79,10 +79,10 @@ dev = [
 trustchain = "trustchain.cli:main"
 
 [project.urls]
-Homepage = "https://github.com/trustchain/trustchain"
+Homepage = "https://github.com/petro1eum/Tool_blockchain"
 Documentation = "https://trustchain.readthedocs.io/"
-Repository = "https://github.com/trustchain/trustchain.git"
-"Bug Tracker" = "https://github.com/trustchain/trustchain/issues"
+Repository = "https://github.com/petro1eum/Tool_blockchain.git"
+"Bug Tracker" = "https://github.com/petro1eum/Tool_blockchain/issues"
 
 [tool.black]
 line-length = 88
