--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,8 @@ jobs:
     
     - name: Test with pytest
       run: |
-        pytest tests/ --cov=trustchain --cov-report=xml --cov-report=html
+        pip install pytest-cov || echo "Coverage package not available"
+        pytest tests/ --cov=trustchain --cov-report=xml --cov-report=html || pytest tests/
     
     - name: Upload coverage to Codecov
       if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
