🎯 Re-enable black and isort checks in CI + fix formatting - full CI/CD pipeline restored

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,13 +37,11 @@ jobs:
     
     - name: Lint with black
       run: |
-        echo "Black check temporarily disabled to test main functionality"
-        # black --check trustchain/ tests/ examples/
+        black --check trustchain/ tests/ examples/
     
     - name: Sort imports with isort
       run: |
-        echo "Isort check temporarily disabled to test main functionality"
-        # isort --check-only trustchain/ tests/ examples/
+        isort --check-only trustchain/ tests/ examples/
     
     - name: Type check with mypy
       run: |
