--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ ai = [
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.23.0",
-    "black>=23.0.0",
+    "black==25.1.0",
     "isort>=5.0.0",
     "mypy>=1.0.0",
     "pre-commit>=3.0.0",
