--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
     
     - name: Test with pytest
       run: |
-        pytest tests/ --cov=trustchain --cov-report=xml --cov-report=html || pytest tests/ -v
+        pytest tests/ --cov=trustchain --cov-report=xml --cov-report=html
     
     - name: Upload coverage to Codecov
       if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
