--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,12 @@ blockchain = [
     "web3>=6.0.0",
     "ipfshttpclient>=0.8.0",
 ]
+web = [
+    "fastapi>=0.104.0",
+    "uvicorn>=0.24.0",
+    "pydantic>=2.0.0",
+    "websockets>=11.0.0",
+]
 monitoring = [
     "prometheus-client>=0.19.0",
     "grafana-api>=1.0.0",
